--- a/css/hebergements_populaires.css
+++ b/css/hebergements_populaires.css
@@ -10,6 +10,7 @@
     background-color: var(--main-bg-color);
     border-radius: 20px;
     padding: 30px;
+    gap: 30px;
     box-sizing: border-box;
 }
 
@@ -139,8 +140,6 @@
     font-weight: 700;
     font-size: 16px;
 }
-
-
 
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
